--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "proxy-addr": "^2.0.7",
     "qrcode": "^1.5.1",
     "reflect-metadata": "^0.1.13",
-    "source-map-support": "^0.5.21"
+    "source-map-support": "^0.5.21",
+    "tar": "^6.1.13"
   }
 }
